# open-o3

./: .env.example  .gitignore  README.md  collect_sft.py  eval.py  main.py  pyproject.toml  run_eval.py  run_sft.py  run_train.py  search_agent.py  sft.py  test_eval.py  train.py
eval/: browsecomp_eval.py  common.py  hf_search_agent_sampler.py  interfaces.py  o_chat_completion_sampler.py  oai_search_agent_sampler.py  simpleqa_eval.py  test.py
