[project]
name = "open-o3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-exa>=0.3.0",
    "langchain-google-community>=2.0.7",
    "langchain-openai>=0.3.29",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.7",
    "openpipe-art[langgraph,plotting,skypilot]>=0.4.11",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "tblib>=3.1.0",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "trl<0.20",
    "wandb>=0.21.3",
]
